--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,8 @@
     "dependencies": {
         "cors": "^2.8.5",
         "express": "^4.19.2",
-        "morgan": "^1.10.0"
+        "morgan": "^1.10.0",
+        "serve-favicon": "^2.5.0"
     },
     "devDependencies": {
         "@types/cors": "^2.8.17",
