--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
         "react-dom": "^18.3.1",
         "react-player": "^2.16.0",
         "react-video-js-player": "^1.1.1",
+        "screenfull": "^6.0.2",
         "videojs-ass": "^0.8.0"
     },
     "devDependencies": {
