--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,9 @@ dist-ssr
 public/Zexal/
 server/videos/
 
+# Environment variables
+.env
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
