--- a/server/package.json
+++ b/server/package.json
@@ -11,8 +11,11 @@
     "license": "ISC",
     "description": "",
     "dependencies": {
+        "@aws-sdk/client-s3": "^3.633.0",
         "cors": "^2.8.5",
+        "dotenv": "^16.4.5",
         "express": "^4.19.2",
+        "express-rate-limit": "^7.4.0",
         "morgan": "^1.10.0",
         "serve-favicon": "^2.5.0"
     },
@@ -21,5 +24,6 @@
         "@types/express": "^4.17.21",
         "@types/morgan": "^1.9.9",
         "nodemon": "^3.1.4"
-    }
+    },
+    "type": "module"
 }
