--- a/server/package.json
+++ b/server/package.json
@@ -12,10 +12,13 @@
     "description": "",
     "dependencies": {
         "@aws-sdk/client-s3": "3.637.0",
+        "axios": "^1.7.7",
         "cors": "2.8.5",
         "dotenv": "16.4.5",
         "express": "4.19.2",
         "express-rate-limit": "7.4.0",
+        "install": "^0.13.0",
+        "npm": "^10.8.3",
         "serve-favicon": "2.5.0"
     },
     "devDependencies": {
